Added constraint fix. Imroved profile page
